# emc_rust

./: .gitignore  README.md  config.ini  init_recon.py  make_mask.py  make_orient.py  make_powder.py  plot_1d_powder.py  plot_2d_powder.py  setup_make_background.py  setup_make_orient.py  setup_reduce_data.py
config/: Cargo.toml
config/src/: lib.rs
make_Emat/: Cargo.toml
make_Emat/src/: lib.rs  main.rs
make_Emat/src/config/: configure.rs
make_background/: Cargo.toml
make_background/src/: lib.rs  main.rs
make_detector/: Cargo.toml
make_detector/src/: main.rs
make_quaternion/: Cargo.toml
make_quaternion/src/: lib.rs  main.rs
make_sym_op/: Cargo.toml  symops.json
make_sym_op/src/: main.rs
orient_peak/: Cargo.toml
orient_peak/src/: lib.rs  main.rs
reduce_data/: Cargo.toml
reduce_data/src/: main.rs
reduce_data/src/config/: configure.rs
write_data/: Cargo.toml
write_data/src/: lib.rs  main.rs
