[package]
name = "make_Emat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
configparser = "3.0.1"
libm = "0.2.5"
rayon = "1.5.3"
clap = { version = "3.2.19", features = ["derive"] }
hdf5 = "0.8.1"
ndarray = "0.15.6"
